examen without external libs

--- a/CAPSE/RTOS/examen_v01_libs/Makefile
+++ b/CAPSE/RTOS/examen_v01_libs/Makefile
@@ -38,7 +38,8 @@ PROJECT_MODULES := modules/$(TARGET)/sapi_rtos \
                    modules/$(TARGET)/osek \
                    modules/$(TARGET)/base \
                    modules/$(TARGET)/board \
-                   modules/$(TARGET)/chip 
+                   modules/$(TARGET)/chip \
+                   projects/ciaa/CAPSE/RTOS/libs
 # source files folder
 PROJECT_SRC_FOLDERS := $(PROJECT)/src
 
